toList and List.of() ... yes the remaining ones don't work